src/objects/Accreditation__c.object
<CustomObject>
    <fields>
        <fullName>DD_Comments__c</fullName>
        <label>Comments</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Service_Area__c</fullName>
        <label>Service Area</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Service_Provider_Name__c</fullName>
        <label>Service Provider Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DD_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>CARF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JCAHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Accreditation</label>
    <nameField>
        <displayFormat>Accreditation-{0000}</displayFormat>
        <label>Accreditation#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>